--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
 [project]
-name = "waiting"
+name = "testing"
 version = "0.1.0"
-description = "waiting using crewAI"
+description = "testing using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
-    "crewai[tools]>=0.148.0,<1.0.0"
+    "crewai[tools]>=0.150.0,<1.0.0"
 ]
 
 [project.scripts]
-waiting = "waiting.main:run"
-run_crew = "waiting.main:run"
-train = "waiting.main:train"
-replay = "waiting.main:replay"
-test = "waiting.main:test"
+testing = "testing.main:run"
+run_crew = "testing.main:run"
+train = "testing.main:train"
+replay = "testing.main:replay"
+test = "testing.main:test"
 
 [build-system]
 requires = ["hatchling"]
