--- a/src/testing/config/tasks.yaml
+++ b/src/testing/config/tasks.yaml
@@ -1,36 +1,11 @@
-richard_persona:
+research_task:
   description: >
-    Thoroughly read through the 'ActivistInvestor.md' document in the 'knowledge' folder.
-    Your goal is to internalize this information, and augment your persona with this additional 
-    information. You will make any and all decisions based on this information.
-    You are not to break character for any reason.
-    In addition to the above, you have knowledge of the team available to you, and the tasks that they can perform.
-    You will be able to assign tasks to the team, and you will be able to make decisions based on the information provided by the team.
-    The team you have access to is in 'core_team.md' in the knowledge folder, full read this document and internalise this data. You are not to adopt any of the personas shown here, you are to remain as Richard, **DO NOT BREAK CHARACTER**, 
-    these are agents available to you for you to assign the necessary work to in order for you to perform your role as an activist investor.
+    Conduct a thorough research about {company}
+    Make sure you find any interesting and relevant information given
+    the current year is {current_year}.
   expected_output: >
-    A clear acknowledgement to the console that you have read the files, adopted the persona and understand your team, listing out all team members and their competencies.
-  agent: richard
-
-research_company_task:
-  description: >
-    Conduct a thorough research about {company} and its market.
-    You need to gather information about the company, its products, services, and market position.
-    You also need to gather information about the industry, market trends, and competitive landscape.
-    You need to ensure that the information is accurate, up-to-date, and relevant to the current market conditions, providing citations from all sources, with a link to the source.
-    You need to ensure that you have all the necessary information to generate the expeted outputs, in line with the 'company_research_checklist.md'
-    in the knowledge folder.
-  expected_output: >
-    A detailed and comprehensive report which includes at least 2 paragraphs and 200 words on the business model,
-    2 paragraphs and 200 words on the product overview,
-    2 paragraphs and 200 words on the market position, and 2 paragraphs and 200 words on the industry overview.
-    Detailed view of customer segmentaqtion and uswe cases.
-    Detailed view of sector classification and positioning.
-    A strategic plan consisting of at least 3 paragraphs and 350 words.
-    The report should be well-structured, easy to read, and provide a comprehensive overview of the {company} and its market.
-    The report should be formatted as markdown without '```'.
+    A list with 10 bullet points of the most relevant information about {company}
   agent: researcher
-  output_file: research/research_summary.md
 
 financial_data_collection_task:
   description: >
@@ -54,7 +29,7 @@ financial_data_collection_task:
     The financial data should be accurate, up-to-date(meaning that you need to take the historical data up to and incuding today's date), 
     and relevant to the current market conditions.
   agent: researcher
-  output_file: research/financial_data_collection.md
+  output_file: research/{company}_financial_data_collection.md
 
 industry_competitive_analysis_collection_task:
   description: >
@@ -76,7 +51,7 @@ industry_competitive_analysis_collection_task:
     The report should be well-structured, easy to read, and provide a comprehensive overview of the industry and competitive landscape.
     The report should be formatted as markdown without '```'.
   agent: researcher
-  output_file: research/industry_competitive_analysis.md
+  output_file: research/{company}_industry_competitive_analysis.md
 
 management_governance_analysis_collection_task:
   description: >
@@ -98,7 +73,7 @@ management_governance_analysis_collection_task:
     The report should be well-structured, easy to read, and provide a comprehensive overview of the management governance analysis.
     The report should be formatted as markdown without '```'.
   agent: researcher
-  output_file: research/management_governance_analysis.md
+  output_file: research/{company}_management_governance_analysis.md
 
 liquidity_risk_assessment_collection_task:
   description: >
@@ -124,33 +99,16 @@ liquidity_risk_assessment_collection_task:
     The report should be well-structured, easy to read, and provide a comprehensive overview of the liquidity risk assessment.
     The report should be formatted as markdown without '```'.
   agent: researcher
-  output_file: research/liquidity_risk_assessment.md
+  output_file: research/{company}_liquidity_risk_assessment.md
 
-#reporting_task:
-  #description: >
-    #Your task is to take all the research files and collate these into a report.
-    #You need to ensure that the report is well-structured, easy to read, and provides
-    #a comprehensive overview of the research findings.
-    #The report should include an executive summary, detailed sections on each topic,
-    #and a conclusion with recommendations.
-    #Make sure to include any relevant charts, graphs, and tables to support the findings.
-    #The report should be formatted as markdown without '```'.
-    #You need to ensure that the report is well-organized and easy to navigate.
-    #The report should be comprehensive and provide a clear understanding of the research findings.
-  #expected_output: >
-    #A fully fledged report with the main topics, each with a full section of information.
-    #Formatted as markdown without '```'
-  #agent: reporting_analyst
-  #output_file: research/final_research_report.md
-  #context: [
-    #"research/research_summary.md",
-    #"research/investment_thesis.md",
-    #"research/financial_due_diligence.md",
-    #"research/industry_competitive_analysis.md",
-    #"research/management_governance_analysis.md",
-    #"research/risk_assessment.md",
-    #"research/exit_strategy_liquidation_analysis.md"
-  #]
+reporting_task:
+  description: >
+    Review the context you got and expand each topic into a full section for a report.
+    Make sure the report is detailed and contains any and all relevant information.
+  expected_output: >
+    A fully fledged report with the main topics, each with a full section of information.
+    Formatted as markdown without '```'
+  agent: researcher
 
 define_investment_thesis_task:
   description: >
@@ -159,13 +117,14 @@ define_investment_thesis_task:
     You need to make sure that you understand the business model and product overview of the {company}
     Provide comprehensive customer segmentation and use cases
     Provide sector classification and positioning.
+    You have access to information in the research folder.
   expected_output: >
     A detailed business model and product overview of the {company},
     including customer segmentation, use cases, sector classification, and positioning.
     A strategic analysis of the core value proposition and market.
     Detailed sector classification and positioning.
   agent: equity_analyst
-  output_file: analysis/investment_thesis.md
+  output_file: analysis/{company}_investment_thesis.md
 
 financial_due_diligence_task:
   description: >
@@ -182,7 +141,7 @@ financial_due_diligence_task:
     profitability metrics, cash flow, and valuations.
     The report should include a detailed financial overview and valuation of the {company}.
   agent: forensic_accountant
-  output_file: analysis/financial_due_diligence.md 
+  output_file: analysis/{company}_financial_due_diligence.md 
 
 industry_competitve_analysis_task:
   description: >
@@ -199,7 +158,7 @@ industry_competitve_analysis_task:
     The report should include a detailed industry trends and innovation cycles view and competitive positioning of the {company}.
     The report should include detailed analysis of regulatory risk and compliance hurdles.
   agent: industry_specialist
-  output_file: analysis/industry_competitive_analysis.md
+  output_file: analysis/{company}_industry_competitive_analysis.md
 
 management_governance_analysis_task:
   description: >
@@ -218,7 +177,7 @@ management_governance_analysis_task:
     Details of governance practices and ESG (Environmental, Social, and Governance) disclosures.
     The report should include a detailed analysis of the management team's track record of capital allocation and strategic execution.
   agent: corporate_lawyer_compliance_expert
-  output_file: analysis/management_governance_analysis.md
+  output_file: analysis/{company}_management_governance_analysis.md
 
 risk_assesment_task:
   description: >
@@ -236,7 +195,7 @@ risk_assesment_task:
     Report must include legal and regulatory exposures.
     Provide a detailed risk assessment report with recommendations for risk mitigation and management.
   agent: regulatory_analyst
-  output_file: analysis/risk_assessment.md
+  output_file: analysis/{company}_risk_assessment.md
 
 exit_strategy_liquidation_analysis_task:
   description: >
@@ -251,7 +210,7 @@ exit_strategy_liquidation_analysis_task:
     upcoming catalysts and news flow, with analyst coverage and price targets.
     The report should include a detailed analysis of exit options, liquidity, and exit timing.
   agent: equity_analyst
-  output_file: analysis/exit_strategy_liquidation_analysis.md
+  output_file: analysis/{company}_exit_strategy_liquidation_analysis.md
 
 decision_task:
   description: >
@@ -264,4 +223,4 @@ decision_task:
     including key findings from the analysis and research.
     The report should be well-structured, easy to read, and provide a comprehensive overview of the decision-making process.
   agent: richard
-  output_file: analysis/decision_report.md
+  output_file: analysis/{company}_decision_report.md
